--- a/projekti/front/site/index.html
+++ b/projekti/front/site/index.html
@@ -5,6 +5,9 @@
   <title>Hello World</title>
 </head>
 <body>
-boom
+<form action="/back" method="post">
+  <input name="name" value="" placeholder="your name">
+  <input type="submit" value="submit">
+</form>
 </body>
 </html>
